app/assets/stylesheets/objects/landing.scss
.landing-container {
  margin-bottom: 40px;

  .landing-header {
    margin-bottom: 40px;
  }
}

.landing-box-container {
  display: flex;
  flex-direction: row-reverse;
  flex-wrap: wrap-reverse;
  margin-bottom: 20px;
}

.landing-box {
  flex: 1 1 178px;
  margin: 5px;
  z-index: 1;

  position: relative;
  perspective: 1000px;
  height: 158px;

  .landing-face {
    @include scale-images;

    backface-visibility: hidden;
    background-color: $brand-white;
    box-shadow: 0 1px 5px $box-shadow-color;
    border-radius: 4px;
    padding: 10px;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: transform 1s;
    transform-style: preserve-3d;
  }

  .landing-face-unstyled {
    background-color: transparent;
    box-shadow: initial;
  }

  .landing-front {
    transform: rotateY(0deg);
  }

  .landing-back {
    transform: rotateY(-180deg);
    height: auto;
    min-height: 100%;
  }

  &:hover {
    .landing-front {
      transform: rotateY(180deg);
    }
    .landing-back {
      transform: rotateY(0deg);
    }
  }
}

.landing-box-header {
  font-size: 18px;
  font-variant: small-caps;
  margin-bottom: 10px;
  text-align: center;
}

.landing-sentence {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 10px;
  text-align: center;
}

.landing-sentence-gradient {
  background-image: linear-gradient(180deg, $p50, $p100, $p200);
  margin-bottom: 0;
  padding: 20px 0;
}

.landing-stats {
  background-color: $p200;
}

.landing-tool-box {
  background-color: $p100;
  display: flex;
  flex-direction: row-reverse;
  font-size: 18px;
  margin-bottom: 10px;
  overflow: hidden;
  padding: 20px;
  position: relative;
}

.landing-tool-left {
  flex: 1;
}

.landing-tool-right {
  width: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.landing-tool-header {
  font-variant: small-caps;
  font-weight: bold;
  margin-bottom: 10px;
}

.landing-tool-links {
  margin-left: 20px;
  padding-right: 20px;
}

.landing-tool-icon {
  color: $p50;
  height: 100px;

  i {
    font-size: 100px;
  }
}

.landing-news-container {
  background-color: $p50;
  margin-bottom: 20px;
}

